Solved all but the last hole; I made 8, 1 more is too much

--- a/docs/style/play.css
+++ b/docs/style/play.css
@@ -47,8 +47,9 @@
   height: 1vw;
 }
 
-#hole-8 #ball {
+#hole-8 #target {
   /* HINT -- MOVE THE TARGET */
+  left: 50%;
 }
 
 #hole-9 #ball {
